Refactoring to follow REST best practices
